[package]
name = "netcontrol"
version = "0.1.0"
edition = "2018"
authors = ["Matas Misiunas <mr.matas.misiunas@gmail.com>"]
repository = "https://github.com/matislovas/netcontrol"
license = "MIT"

[dependencies]
byte-unit = "4.0.12"
chrono = "^0.4"
clap = "2.33.3"
fancy-regex = "0.7.1"
ipnetwork = "0.18.0"
libc = "0.2.103"
log = "0.4.14"
log4rs = "1.0.0"
nflog = { git = "https://github.com/chifflier/nflog-rs", branch = "master" }
# nftnl = { git = "https://github.com/matislovas/nftnl-rs", branch = "master" }
nftnl = { path = "../nftnl-rs/nftnl" }
mnl = "0.2.0"
once_cell = "1.8.0"
parse_duration = "2.1.1"
signal-hook = "0.3.10"
timer = "0.2.0"
trust-dns-resolver = "0.20.3"
